--- a/DX9GAME_SKRBASIC_2/DX9GAME_SKRBASIC/DX9GAME_SKRBASIC.vcxproj.filters
+++ b/DX9GAME_SKRBASIC_2/DX9GAME_SKRBASIC/DX9GAME_SKRBASIC.vcxproj.filters
@@ -102,7 +102,7 @@
     <ClInclude Include="packageInclude.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="SystemParams.h">
+    <ClInclude Include="SystemParamSetting.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="cursor\cursor.h">
@@ -143,16 +143,13 @@
     <ClCompile Include="system\source\Sound.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="system\source\SystemParam.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="GameMain.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="WinMain.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="system\source\ImageBase.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="GameMain.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
